<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="80dp">

    <LinearLayout
        android:id="@+id/item_typhoon"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_taifeng" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/title_typhoon"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="12dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/item_air_quality"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_air_quality" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/title_air_quality"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="12dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/item_calendar"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_calendar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/title_calendar"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="12dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/item_constellation"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_constellation" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/title_constellation"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="12dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/item_sign"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_sign" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/title_sign"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="12dp" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_muyu"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/muyuLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            >

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_home_muyu" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/title_muyu"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="12dp" />

        </LinearLayout>

        <ImageView
            android:layout_width="26dp"
            android:layout_height="15dp"
            android:src="@drawable/ic_home_fu"
            android:layout_marginBottom="-14dp"
            android:layout_marginStart="36dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/muyuLayout"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
